deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billboard
  labels:
    name: billboard
